--- a/templates/users/base.html
+++ b/templates/users/base.html
@@ -45,12 +45,12 @@
     </div>
   </section>
 
-  {% block deactivate_housemate %}
-    {% include 'users/deactivate_housemate.html' %}
+  {% block delete_housechore %}
+    {% include 'users/delete_housechore.html' %}
   {% endblock %}
 
-  {% block add_housechore %}
-    {% include 'users/add_housechore.html' %}
+  {% block deactivate_housemate %}
+    {% include 'users/deactivate_housemate.html' %}
   {% endblock %}
 
   {% block request_house_owner %}
@@ -59,6 +59,10 @@
 
   {% block help_center %}
     {% include 'users/help_center.html' %}
+  {% endblock %}
+
+  {% block add_housechore %}
+    {% include 'users/add_housechore.html' %}
   {% endblock %}
 
   {% block bootstrap %}
