--- a/templates/app/base.html
+++ b/templates/app/base.html
@@ -11,7 +11,7 @@
   <meta name="keywords" content="家事 シェアハウス Atom house chore">
 
   {% block header %}
-    {% include 'users/header.html' %}
+    {% include 'common/header.html' %}
   {% endblock %}
 
   <!-- FontAwesome -->
@@ -22,7 +22,7 @@
 
 <body>
   {% block messages %}
-    {% include 'users/messages.html' %}
+    {% include 'common/messages.html' %}
   {% endblock %}
 
   <section class="row mx-auto mt-lg-5 pt-5 mt-2">
@@ -35,7 +35,7 @@
           {% trans "ヘルプセンター" %}
         </p>
         {% block language %}
-          {% include 'users/language.html' %}
+          {% include 'common/language.html' %}
         {% endblock %}
       </div>
     </div>
@@ -54,11 +54,11 @@
   {% endblock %}
 
   {% block help_center %}
-    {% include 'users/help_center.html' %}
+    {% include 'common/help_center.html' %}
   {% endblock %}
 
   {% block bootstrap %}
-    {% include 'users/bootstrap.html' %}
+    {% include 'common/bootstrap.html' %}
   {% endblock %}
   <!-- device related -->
   <script src="{% static 'js/users/base.min.js' %}"></script>
