--- a/templates/users/base.html
+++ b/templates/users/base.html
@@ -11,7 +11,7 @@
   <meta name="keywords" content="家事 シェアハウス Atom house chore">
 
   {% block header %}
-    {% include 'users/header.html' %}
+    {% include 'common/header.html' %}
   {% endblock %}
 
   <!-- Recaptcha -->
@@ -26,7 +26,7 @@
 
 <body>
   {% block messages %}
-    {% include 'users/messages.html' %}
+    {% include 'common/messages.html' %}
   {% endblock %}
 
   <section class="row mx-auto mt-lg-5 pt-5 mt-2">
@@ -39,18 +39,18 @@
           {% trans "ヘルプセンター" %}
         </p>
         {% block language %}
-          {% include 'users/language.html' %}
+          {% include 'common/language.html' %}
         {% endblock %}
       </div>
     </div>
   </section>
 
   {% block delete_housechore %}
-    {% include 'users/delete_housechore.html' %}
+    {% include 'users/manage/delete_housechore.html' %}
   {% endblock %}
 
   {% block deactivate_housemate %}
-    {% include 'users/deactivate_housemate.html' %}
+    {% include 'users/manage/deactivate_housemate.html' %}
   {% endblock %}
 
   {% block request_house_owner %}
@@ -58,15 +58,15 @@
   {% endblock %}
 
   {% block help_center %}
-    {% include 'users/help_center.html' %}
+    {% include 'common/help_center.html' %}
   {% endblock %}
 
   {% block add_housechore %}
-    {% include 'users/add_housechore.html' %}
+    {% include 'users/manage/add_housechore.html' %}
   {% endblock %}
 
   {% block bootstrap %}
-    {% include 'users/bootstrap.html' %}
+    {% include 'common/bootstrap.html' %}
   {% endblock %}
   <!-- device related -->
   <script src="{% static 'js/users/base.min.js' %}"></script>
