--- a/templates/app/ch_username.html
+++ b/templates/app/ch_username.html
@@ -1,7 +1,8 @@
 {% load i18n %}
 {% load static %}
 
-<div class="modal fade" id="ch_username" tabindex="-1" role="dialog" aria-labelledby="ch_username_ModalLabel" aria-hidden="true">
+<div class="modal fade" id="ch_username" tabindex="-1" role="dialog" aria-labelledby="ch_username_ModalLabel"
+  aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header">
