--- a/templates/users/manage/add_housechore.html
+++ b/templates/users/manage/add_housechore.html
@@ -1,7 +1,8 @@
 {% load i18n %}
 {% load static %}
 
-<div class="modal fade" id="add_housechore" tabindex="-1" role="dialog" aria-labelledby="add_housechore_ModalLabel" aria-hidden="true">
+<div class="modal fade" id="add_housechore" tabindex="-1" role="dialog" aria-labelledby="add_housechore_ModalLabel"
+  aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -27,5 +28,6 @@
           </div>
         </form>
       </div>
+    </div>
   </div>
 </div>
