--- a/templates/users/manage/deactivate_housemate.html
+++ b/templates/users/manage/deactivate_housemate.html
@@ -1,7 +1,8 @@
 {% load i18n %}
 {% load static %}
 
-<div class="modal fade" id="deactivate_housemate" tabindex="-1" role="dialog" aria-labelledby="deactivate_housemate_ModalLabel" aria-hidden="true">
+<div class="modal fade" id="deactivate_housemate" tabindex="-1" role="dialog"
+  aria-labelledby="deactivate_housemate_ModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -35,5 +36,6 @@
           </div>
         </form>
       </div>
+    </div>
   </div>
 </div>
