--- a/templates/app/request_ch_house.html
+++ b/templates/app/request_ch_house.html
@@ -1,7 +1,8 @@
 {% load i18n %}
 {% load static %}
 
-<div class="modal fade" id="request_ch_house" tabindex="-1" role="dialog" aria-labelledby="request_ch_house_ModalLabel" aria-hidden="true">
+<div class="modal fade" id="request_ch_house" tabindex="-1" role="dialog" aria-labelledby="request_ch_house_ModalLabel"
+  aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -16,12 +17,12 @@
         <form action="{% url 'app:request_ch_house' %}" method="POST">{% csrf_token %}
           <div class="form-group">
             <label>Email:</label>
-            <input class="mb-3" type="email" name="email" required><br>
+            <input class="mb-3 w-50" type="email" name="email" value="{{ user.email }}" readonly><br>
             <label>
               {% trans "現在のハウス:" %}
             </label>
             {{ user.house }}<br>
-            <label for="message-text" class="col-form-label">
+            <label>
               {% trans "新しく設定したいハウス:" %}
             </label>
             {{ house_choose_form.as_p }}
@@ -36,5 +37,6 @@
           </div>
         </form>
       </div>
+    </div>
   </div>
 </div>
