--- a/templates/common/help_center.html
+++ b/templates/common/help_center.html
@@ -1,7 +1,8 @@
 {% load i18n %}
 {% load static %}
 
-<div class="modal fade" id="help_center" tabindex="-1" role="dialog" aria-labelledby="help_center_ModalLabel" aria-hidden="true">
+<div class="modal fade" id="help_center" tabindex="-1" role="dialog" aria-labelledby="help_center_ModalLabel"
+  aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -15,12 +16,12 @@
       <div class="modal-body">
         <form action="{% url 'users:inquire' %}" method="GET">
           <div class="form-group">
-            <label>Email:</label><br>
-            <input class="my-3" type="email" name="email" required>
-            <label for="message-text" class="col-form-label">
+            <label>Email:</label>
+            <input class="my-3 w-50" type="email" name="email" value="{{ user.email }}" readonly><br>
+            <label>
               {% trans "お問い合わせ内容" %}
             </label><br>
-            <textarea class="form-control" name="content" required></textarea>
+            <textarea class="form-control" rows="5" name="content" required></textarea>
           </div>
           <div class="d-flex pt-2">
             <button type="button" class="btn w-50 mr-1" data-dismiss="modal">
@@ -32,5 +33,6 @@
           </div>
         </form>
       </div>
+    </div>
   </div>
 </div>
