--- a/templates/users/manage/delete_housechore.html
+++ b/templates/users/manage/delete_housechore.html
@@ -1,7 +1,8 @@
 {% load i18n %}
 {% load static %}
 
-<div class="modal fade" id="delete_housechore" tabindex="-1" role="dialog" aria-labelledby="delete_housechore_ModalLabel" aria-hidden="true">
+<div class="modal fade" id="delete_housechore" tabindex="-1" role="dialog"
+  aria-labelledby="delete_housechore_ModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -37,6 +38,6 @@
           </div>
         </form>
       </div>
+    </div>
   </div>
 </div>
-
