--- a/templates/users/request_house_owner.html
+++ b/templates/users/request_house_owner.html
@@ -1,7 +1,8 @@
 {% load i18n %}
 {% load static %}
 
-<div class="modal fade" id="request_house_owner" tabindex="-1" role="dialog" aria-labelledby="request_house_owner_ModalLabel" aria-hidden="true">
+<div class="modal fade" id="request_house_owner" tabindex="-1" role="dialog"
+  aria-labelledby="request_house_owner_ModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -32,5 +33,6 @@
           </div>
         </form>
       </div>
+    </div>
   </div>
 </div>
