--- a/static/css/users/style.scss
+++ b/static/css/users/style.scss
@@ -128,6 +128,7 @@ html {
         }
         // manage
         .manage_table {
+          overflow-x: scroll;
           tr {
             th {
               text-align: center;
