fix bug of mail

--- a/templates/users/manage/manage.html
+++ b/templates/users/manage/manage.html
@@ -64,10 +64,10 @@
   </table>
   <hr>
   <div class="row d-flex justify-content-around mb-5 mx-sm-0 mx-1">
-    <button class="btn col-sm-5 col-12" data-toggle="modal" data-target="#add_housechore">
+    <button class="btn col-sm-5 col-12 my-sm-0 my-1" data-toggle="modal" data-target="#add_housechore">
       {% trans "追加" %}
     </button>
-    <button class="btn col-sm-5 col-12" data-toggle="modal" data-target="#delete_housechore">
+    <button class="btn col-sm-5 col-12 my-sm-0 my-1" data-toggle="modal" data-target="#delete_housechore">
       {% trans "削除" %}
     </button>
   </div>
