--- a/templates/common/help_center.html
+++ b/templates/common/help_center.html
@@ -17,7 +17,7 @@
         <form action="{% url 'users:inquire' %}" method="GET">
           <div class="form-group">
             <label>Email:</label>
-            <input class="my-3 w-50" type="email" name="email" value="{{ user.email }}" readonly><br>
+            <input class="my-3 w-50" type="email" name="email" value="{{ user.email }}" readonly style="border: none; pointer-events: none;"><br>
             <label>
               {% trans "お問い合わせ内容" %}
             </label><br>
