--- a/templates/users/manage/housechore_detail.html
+++ b/templates/users/manage/housechore_detail.html
@@ -27,7 +27,7 @@
           {% trans "詳細" %}
         </th>
         <td>
-          <input class="w-100 pb-5" type="text" value="{{ housechore.description }}" name="escription" style="overflow-y: scroll;">
+          <textarea name="escription" class="w-100 pb-5" cols="30" style="overflow-y: scroll;">{{ housechore.description }}</textarea>
         </td>
       </tr>
       <tr>
