make two factor login

--- a/templates/users/auth/pls_activate.html
+++ b/templates/users/auth/pls_activate.html
@@ -4,11 +4,19 @@
 
 {% block content %}
 <div class="pt-4 pb-3">
-  <p>
-    {% trans "あなたのメールアドレス宛てに本登録用のメールを送りました。" %}
+  <p>{{ new_user }}
+    {% trans "様" %}
   </p>
   <p>
-    {% trans "メールのURLをクリックして、本登録を完了させてください。" %}
+    {% trans "Atomをご利用いただきありがとうございます。" %}
+  </p>
+  <p>
+    {% trans "あなたのアカウント" %}
+    （{{ new_user }}）
+    {% trans "は現在、仮登録の状態です。" %}
+  </p>
+  <p>
+    {% trans "本登録用のメールをお送りしましたので、メールに添付されたURLをクリックして、本登録を完了させてください。" %}
   </p>
 </div>
 {% endblock content %}
