--- a/templates/users/auth/signup_doing.html
+++ b/templates/users/auth/signup_doing.html
@@ -4,24 +4,10 @@
 
 {% block content %}
 <div class="pt-4 pb-3">
-  <!-- <p>
-    {% trans "2段階認証を実行します。" %}
-  </p>
-  <p>
-    {% trans "以下のQRコードを読み込んで、ワンタイムパスワードを下に入力して送信してください。" %}
-  </p>
-  <p style="font-size: small;">
-    {% trans "※ このページを閉じると<br>再度QRコードを表示出来ないためご注意ください。" %}
-  </p>
-  <p><img src="data:image/png;base64,{{ request.session.img }}" alt="qrcode" width="100"></p> -->
-  <form action="{% url 'users:signup_done' %}" method="GET">
-    <table class="w-100">
-      {{ two_step_auth_form.as_table }}
-    </table>
-    <!-- TODO: ワンタイムパスワードのQRコードを有効なものにする -->
-    <p>＊ワンタイムパスワードはただいま復旧作業中です。どんな数字でも構いません。</p>
+  <form class="my-5" action="{% url 'users:signup_done' %}" method="GET">
+    <input type="text" value="{{ token }}" style="display: none;" name="token">
     <button type="submit" class="btn w-100 mt-3">
-      {% trans "送信" %}
+      {% trans "本登録" %}
     </button>
   </form>
 </div>
