--- a/templates/common/header.html
+++ b/templates/common/header.html
@@ -1,4 +1,9 @@
 {% load static %}
+<!-- meta tag -->
+<title>Atom</title>
+<meta name="description" content="シェアハウスで家事を自動で割り振ってみよう">
+<meta name="keywords" content="家事 シェアハウス Atom house chore">
+
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
