--- a/templates/users/base.html
+++ b/templates/users/base.html
@@ -5,11 +5,6 @@
 <html lang="ja">
 
 <head>
-  <!-- meta tag -->
-  <title>Atom</title>
-  <meta name="description" content="シェアハウスで家事を自動で割り振ってみよう">
-  <meta name="keywords" content="家事 シェアハウス Atom house chore">
-
   {% block header %}
     {% include 'common/header.html' %}
   {% endblock %}
@@ -20,8 +15,10 @@
   <!-- FontAwesome -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
 
-  <link rel="stylesheet" href="{% static 'css/users/style.min.css' %}">
-  <link rel="stylesheet" href="{% static 'css/users/bootstrap-social.min.css' %}">
+  {% block style %}
+    {% include 'common/style.html' %}
+  {% endblock %}
+  <link rel="stylesheet" href="{% static 'css/bootstrap-social.min.css' %}">
 </head>
 
 <body>
@@ -68,8 +65,10 @@
   {% block bootstrap %}
     {% include 'common/bootstrap.html' %}
   {% endblock %}
-  <!-- device related -->
-  <script src="{% static 'js/users/base.min.js' %}"></script>
+
+  {% block javascript %}
+    {% include 'common/javascript.html' %}
+  {% endblock %}
 </body>
 
 </html>
