--- a/static/css/style.css
+++ b/static/css/style.css
@@ -31,6 +31,14 @@ input {
   border-radius: 4px;
 }
 
+textarea,
+select {
+  border-color: #c3c2c2;
+  -webkit-box-shadow: 0.6px 0.6px #c3c2c2 inset;
+          box-shadow: 0.6px 0.6px #c3c2c2 inset;
+  border-radius: 4px;
+}
+
 /* Make images easier to work with */
 img,
 picture,
@@ -104,6 +112,34 @@ html body section .container .header {
 
 html body section .container p b {
   color: #023465;
+}
+
+html body section .container .logout,
+html body section .container .withdraw {
+  color: #8ebbcf;
+  cursor: pointer;
+}
+
+html body section .container .logout:hover,
+html body section .container .withdraw:hover {
+  color: #023465;
+  text-decoration: underline;
+}
+
+html body section .container .manage_table {
+  overflow-x: scroll;
+}
+
+html body section .container .manage_table tr th {
+  text-align: center;
+}
+
+html body section .container .manage_table tr td {
+  text-align: center;
+}
+
+html body section .container .housemate_detail tr td {
+  text-align: center;
 }
 
 .message-success {
