--- a/templates/users/base.html
+++ b/templates/users/base.html
@@ -62,12 +62,8 @@
     {% include 'common/help_center.html' %}
   {% endblock %}
 
-  {% block bootstrap %}
-    {% include 'common/bootstrap.html' %}
-  {% endblock %}
-
-  {% block javascript %}
-    {% include 'common/javascript.html' %}
+  {% block script %}
+    {% include 'common/script.html' %}
   {% endblock %}
 </body>
 
