--- a/templates/app/base.html
+++ b/templates/app/base.html
@@ -24,14 +24,9 @@
       {% block content %}
       {% endblock %}
 
-      <div class="mx-2 d-flex justify-content-between my-3">
-        <p class="link" data-toggle="modal" data-target="#help_center">
-          {% trans "ヘルプセンター" %}
-        </p>
-        {% block language %}
-          {% include 'common/language.html' %}
-        {% endblock %}
-      </div>
+      {% block section_buttom %}
+        {% include 'common/section_buttom.html' %}
+      {% endblock %}
     </div>
   </section>
 
