--- a/templates/common/footer.html
+++ b/templates/common/footer.html
@@ -81,3 +81,6 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 <!-- device related -->
 <script src="{% static 'js/base.min.js' %}"></script>
+{% if user.is_superuser != True %}
+<script src="{% static 'js/withdrawConfirm.min.js' %}"></script>
+{% endif %}
