fix email content

--- a/templates/users/auth/signup_done.html
+++ b/templates/users/auth/signup_done.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block content %}
-<div class="pt-4 pb-3">
+<div class="px-2 pt-4 pb-3">
   <p>
     {% trans "本登録が完了しました。" %}
   </p>
