--- a/templates/users/auth/pls_activate.html
+++ b/templates/users/auth/pls_activate.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block content %}
-<div class="pt-4 pb-3">
+<div class="px-2 pt-4 pb-3">
   <p>{{ new_user }}
     {% trans "様" %}
   </p>
