--- a/templates/users/auth/signup_doing.html
+++ b/templates/users/auth/signup_doing.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block content %}
-<div class="pt-4 pb-3">
+<div class="px-2 pt-4 pb-3">
   <form class="my-5" action="{% url 'users:signup_done' %}" method="GET">
     <input type="text" value="{{ token }}" style="display: none;" name="token">
     <button type="submit" class="btn w-100 mt-3">
