--- a/templates/404.html
+++ b/templates/404.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div class="pt-4 pb-3 text-center">
   <a href="#" onclick="history.back(); return false;">
-    <img src="{% static 'img/users/error_404.svg' %}" alt="404 Error">
+    <img src="{% static 'img/error_404.svg' %}" alt="404 Error">
   </a>
 </div>
 {% endblock content %}
