--- a/templates/common/header.html
+++ b/templates/common/header.html
@@ -8,9 +8,9 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<link rel="apple-touch-icon" href="{% static 'img/users/icon.png' %}">
+<link rel="apple-touch-icon" href="{% static 'img/icon.png' %}">
 
 <!-- Bootstrap CSS -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
-<link rel="icon" type="image/png" href="{% static 'img/users/favicon.ico' %}">
+<link rel="icon" type="image/png" href="{% static 'img/favicon.ico' %}">
