--- a/templates/app/base.html
+++ b/templates/app/base.html
@@ -15,8 +15,8 @@
 </head>
 
 <body>
-  {% block messages %}
-    {% include 'common/messages.html' %}
+  {% block body_top %}
+    {% include 'common/body_top.html' %}
   {% endblock %}
 
   <section class="row mx-auto mt-lg-5 pt-5 mt-2">
