--- a/templates/app/modal.html
+++ b/templates/app/modal.html
@@ -23,7 +23,7 @@
             <button type="button" class="btn w-50 mr-1" data-dismiss="modal">
               {% trans "キャンセル" %}
             </button>
-            <button type="submit" class="btn w-50 ml-1">
+            <button onclick="loading_show()" type="submit" class="btn w-50 ml-1">
               {% trans "設定" %}
             </button>
           </div>
@@ -64,7 +64,7 @@
             <button type="button" class="btn w-50 mr-1" data-dismiss="modal">
               {% trans "キャンセル" %}
             </button>
-            <button type="submit" class="btn w-50 ml-1">
+            <button onclick="loading_show()" type="submit" class="btn w-50 ml-1">
               {% trans "送信" %}
             </button>
           </div>
@@ -101,7 +101,7 @@
             <button type="button" class="btn w-50 mr-1" data-dismiss="modal">
               {% trans "キャンセル" %}
             </button>
-            <button type="submit" class="btn w-50 ml-1">
+            <button onclick="loading_show()" type="submit" class="btn w-50 ml-1">
               {% trans "送信" %}
             </button>
           </div>
