--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -22,7 +22,7 @@
     </label><br>
     <input type="password" name="password" class="w-100 py-1"><br>
     <div class="text-center mt-4 mb-3">
-      <button type="submit" class="btn px-3">
+      <button type="submit" class="btn px-3" onclick="loading_show()">
         {% trans "ログイン" %}
       </button>
     </div>
