--- a/templates/users/manage/housechore_detail.html
+++ b/templates/users/manage/housechore_detail.html
@@ -56,7 +56,7 @@
       {% trans "*無効にすると家事割り振りの対象外となり、数としてもカウントされなくなります。この操作はいつでも元に戻せます。" %}
     </p>
     <hr>
-    <button class="btn mb-5 w-100">
+    <button class="btn mb-5 w-100" onclick="loading_show()">
       {% trans "更新" %}
     </button>
   </form>
