--- a/templates/users/manage/manage.html
+++ b/templates/users/manage/manage.html
@@ -72,7 +72,7 @@
     </button>
   </div>
 </div>
-<a href="{% url 'users:index' %}">
+<a class="px-2" href="{% url 'users:index' %}">
   {% trans "ユーザー画面に戻る" %}
 </a>
 {% endblock %}
