--- a/templates/users/manage/modal.html
+++ b/templates/users/manage/modal.html
@@ -23,7 +23,7 @@
             <button type="button" class="btn w-50 mr-1" data-dismiss="modal">
               {% trans "キャンセル" %}
             </button>
-            <button type="submit" class="btn w-50 ml-1">
+            <button type="submit" class="btn w-50 ml-1" onclick="loading_show()">
               {% trans "追加" %}
             </button>
           </div>
@@ -65,7 +65,7 @@
             <button type="button" class="btn w-50 mr-1" data-dismiss="modal">
               {% trans "キャンセル" %}
             </button>
-            <button type="submit" class="btn w-50 ml-1">
+            <button type="submit" class="btn w-50 ml-1" onclick="loading_show()">
               {% trans "削除" %}
             </button>
           </div>
@@ -105,7 +105,7 @@
             <button type="button" class="btn w-50 mr-1" data-dismiss="modal">
               {% trans "キャンセル" %}
             </button>
-            <button type="submit" class="btn w-50 ml-1">
+            <button type="submit" class="btn w-50 ml-1" onclick="loading_show()">
               {% trans "deactivate" %}
             </button>
           </div>
