--- a/templates/users/base.html
+++ b/templates/users/base.html
@@ -22,8 +22,8 @@
 </head>
 
 <body>
-  {% block messages %}
-    {% include 'common/messages.html' %}
+  {% block body_top %}
+    {% include 'common/body_top.html' %}
   {% endblock %}
 
   <section class="row mx-auto mt-lg-5 pt-5 mt-2">
