--- a/static/css/style.css
+++ b/static/css/style.css
@@ -132,6 +132,28 @@ html body section .container .numtable p b {
   color: #609bb6;
 }
 
+html body section .container .housechore__card {
+  border-radius: 4px;
+  background-color: #f8f8f8;
+  -webkit-box-shadow: 2px #c3c2c2;
+          box-shadow: 2px #c3c2c2;
+}
+
+html body section .container .housechore__card:hover {
+  cursor: pointer;
+  background-color: #c3c2c2;
+}
+
+html body section .container .housechore__card input {
+  visibility: hidden;
+}
+
+html body section .container .tapped_housechore {
+  -webkit-transform: rotate(-0.01turn);
+          transform: rotate(-0.01turn);
+  background-color: #feffcb;
+}
+
 html body section .container .logout,
 html body section .container .withdraw {
   color: #8ebbcf;
