--- a/templates/common/section_buttom.html
+++ b/templates/common/section_buttom.html
@@ -2,9 +2,11 @@
 {% load static %}
 
 <div class="d-flex mx-2 justify-content-between mt-3">
+  {% if user.is_authenticated %}
   <p class="link" data-toggle="modal" data-target="#help_center">
     {% trans "ヘルプセンター" %}
   </p>
+  {% endif %}
   <!-- language -->
   <form class="mb-3" action="{% url 'set_language' %}" method="POST">{% csrf_token %}
     <input name="next" type="hidden" value="{{ redirect_to }}">
@@ -25,10 +27,11 @@
   </form>
 </div>
 
+{% if user.is_authenticated %}
 <!-- breadcrumb -->
 <nav class="mx-1" aria-label="breadcrumb">
   <ol class="breadcrumb">
-    <li class="breadcrumb-item breadcrumb_active" id="login_page">
+    <li class="breadcrumb-item breadcrumb_hide" id="login_page">
       <a href="{% url 'users:login' %}">
         {% trans "ログイン" %}
       </a>
@@ -45,3 +48,4 @@
     </li>
   </ol>
 </nav>
+{% endif %}
