--- a/templates/app/modal.html
+++ b/templates/app/modal.html
@@ -94,7 +94,7 @@
               {% trans "申請フォームを記入してください。" %}
             </label><br><br>
             <label>Email:</label>
-            <input class="my-3" type="email" name="email" readonly style="border: none; pointer-events: none;">
+            <input class="my-3" type="email" value="{{ email }}" name="email" readonly style="border: none; pointer-events: none;">
             {{ house_choose_form.as_p }}
           </div>
           <div class="d-flex pt-2">
